@@ -1,0 +1,8 @@
+import datetime
+from django.http import HttpResponse
+from django.utils import dateformat
+
+
+def format_date(request):
+    d = datetime.datetime.now()
+    return HttpResponse(dateformat.format(d, request.GET.get('fmt', '')))
